--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,16 @@
 }
 
 body {
-  background-color: pink;
+  background-color: rgb(109, 53, 165);
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calculator {
-  width: 490px;
-  height: 670px;
+  width: 510px;
+  height: 700px;
   margin: 150px auto;
-  padding: 10px;
+  padding: 15px;
   background-color: #000;
   border-radius: 25px;
   box-shadow: 0 10px 20px ;
