--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: rgb(109, 53, 165);
+  background-color: rgb(168, 217, 243);
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -36,11 +36,11 @@ body {
 button {
   border: none;
   color: #fff;
-  border-radius: 50px;
-  padding: 28px 30px;
+  border-radius: 10px;
+  padding: 28px 20px;
   width: 22%;
   margin: 10px 6px;
-  font-size: 30px;
+  font-size: 20px;
   background-color: rgba(128,128,128, 0.372);
 }
 
@@ -51,5 +51,5 @@ button {
   background-color: grey;
 }
 .btn-orange {
-  background-color: orange;
+  background-color: #1c54cc;
 }
