--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,10 @@ body {
 }
 
 .calculator {
-  width: 510px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 480px;
   height: 700px;
   margin: 150px auto;
   padding: 15px;
@@ -25,11 +28,12 @@ body {
   color: #fff;
   font-size: 70px;
   text-align: end;
-  padding-top: 20px;
+  padding: 20px;
 }
 
 .buttons {
   display: flex;
+  flex: end;
   flex-wrap: wrap;
 }
 
