--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
 }
 
 body {
-  background-color: rgb(168, 217, 243);
+  background: #f2b75e;
+  background: radial-gradient(circle,rgba(242, 183, 94, 1) 0%, rgba(196, 82, 82, 1) 100%);
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -19,6 +20,7 @@ body {
   height: 700px;
   margin: 150px auto;
   padding: 15px;
+  font-family: 'Segoe UI', 'Roboto', sans-serif;
   background-color: #000;
   border-radius: 25px;
   box-shadow: 0 10px 20px ;
@@ -29,6 +31,7 @@ body {
   font-size: 70px;
   text-align: end;
   padding: 20px;
+  box-shadow: inset 0 0 4px rgba(255, 255, 255, 0.05);
 }
 
 .buttons {
@@ -44,7 +47,7 @@ button {
   padding: 28px 20px;
   width: 22%;
   margin: 10px 6px;
-  font-size: 20px;
+  font-size: 25px;
   background-color: rgba(128,128,128, 0.372);
 }
 
@@ -55,5 +58,6 @@ button {
   background-color: grey;
 }
 .btn-orange {
-  background-color: #1c54cc;
+  background-color: orange;
+  font-size: 30px;
 }
