--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
 }
 
 body {
-  background: #f2b75e;
+  /* background: #f2b75e; */
+  background: pink;
   background: radial-gradient(circle,rgba(242, 183, 94, 1) 0%, rgba(196, 82, 82, 1) 100%);
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
