--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,8 @@ body {
 }
 
 .display {
-  color: #fff;
+  /* color: #fff; */
+  color: black;
   font-size: 70px;
   text-align: end;
   padding: 20px;
